plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.careercoach'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 핵심 웹 기능
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // WebClient (OpenAI API 호출용)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
